# Simple-Smartlife-Sim

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  rl_agent.py
data/: grader.json  tasks.json
environment/: __init__.py  actions.py  agents.py  agriculture_system.py  building_system.py  env.py  hospital_system.py  household_system.py  needs_system.py  reward.py  state.py  time_system.py  trading_system.py  weather_system.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/models/: farm.glb  hospital.glb  house.glb
frontend/src/: Agent.jsx  App.jsx  CameraController.jsx  City.jsx  ErrorBoundary.jsx  Farm.jsx  NPC.jsx  RoadSystem.jsx  Scene.jsx  TimeSystem.jsx  Trader.jsx  Vehicle.jsx  Village.jsx  WeatherSystem.jsx  api.js  main.jsx  style.css
frontend/src/components/: ActionButtons.jsx  DecisionOverlay.jsx  FloatingEffects.jsx  Home.jsx  Hospital.jsx  Office.jsx
frontend/src/systems/: navigation.js  simulation.js
grader/: __init__.py  grader.py
server/: app.py
tasks/: task1.py  task2.py  task3.py
