[project]
name = "smartlifesim"
version = "0.1.0"
description = "SmartLifeSim OpenEnv submission"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.32.0",
  "pydantic==2.10.6",
  "openai>=2.7.2,<3.0.0",
  "python-dotenv==1.0.1",
  "openenv-core>=0.2.0",
  "numpy>=1.24.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
